Wireframe is not Updated When Converting to Mesh #81997

Closed
opened 2020-10-23 11:22:11 +02:00 by Philip Holzmann · 6 comments

System Information
Operating system: Windows 10 64 bit
Graphics card: Nvidia GTX 750 Ti

Blender Version
Broken: 2.90.1 release, 2.92 alpha 165b4f85ec
Worked: 2.79b

Short description of error
When "Optimal Display" in the Subdivision Surface modifier is enabled, only the edges of the original mesh are displayed in the wireframe.
Of course, when the modifier is applied regularly, the wireframe shows all edges of the resulting mesh.

However, if the modifier is applied by using Object > Convert To > Mesh, the wireframe is not updated and stays "sparse".

Exact steps for others to reproduce the error
wireframe_optimal_display.blend

  1. Open the file.
  2. In the 3d view header click on Object > Convert To > Mesh.
  3. Observe that the mesh still has a sparse wireframe.
  4. Enter Edit Mode and then switch back to Object Mode.
  5. Observe that the wireframe now displays all edges.
**System Information** Operating system: Windows 10 64 bit Graphics card: Nvidia GTX 750 Ti **Blender Version** Broken: 2.90.1 release, 2.92 alpha 165b4f85ec23 Worked: 2.79b **Short description of error** When "Optimal Display" in the Subdivision Surface modifier is enabled, only the edges of the original mesh are displayed in the wireframe. Of course, when the modifier is applied regularly, the wireframe shows all edges of the resulting mesh. However, if the modifier is applied by using *Object* > *Convert To* > *Mesh*, the wireframe is not updated and stays "sparse". **Exact steps for others to reproduce the error** [wireframe_optimal_display.blend](https://archive.blender.org/developer/F9046737/wireframe_optimal_display.blend) 1. Open the file. 2. In the 3d view header click on *Object* > *Convert To* > *Mesh*. 3. Observe that the mesh still has a sparse wireframe. 4. Enter *Edit Mode* and then switch back to *Object Mode*. 5. Observe that the wireframe now displays all edges.

Added subscriber: @Foaly

Added subscriber: @Foaly

This issue was referenced by 42980abf8d

This issue was referenced by 42980abf8d0d126b0f472601cc47a3929217e394
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2020-10-23 22:30:40 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

When using Optimal Display, some edges are not flagged ME_EDGEDRAW | ME_EDGERENDER
When the modifier is applied through the UI in the modifier stack this is prevented because the modifyMesh callback is run with MOD_APPLY_TO_BASE_MESH (this will effectively turn of Optimal Display).
When converting to mesh, we'd probably have to do it "by hand", have a patch (not sure though if there is a nicer way to do this though), will post in a bit.

Can confirm. When using Optimal Display, some edges are not flagged `ME_EDGEDRAW` | `ME_EDGERENDER` When the modifier is applied through the UI in the modifier stack this is prevented because the `modifyMesh` callback is run with `MOD_APPLY_TO_BASE_MESH` (this will effectively turn of Optimal Display). When converting to mesh, we'd probably have to do it "by hand", have a patch (not sure though if there is a nicer way to do this though), will post in a bit.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81997
No description provided.